# wraith

./: .env.example  .gitignore  LICENSE  README.md  start.sh
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_profile_match.py  0003_feedback_improvements.py  0004_feedback_reason_tags.py  0005_article_og_image.py  0006_user_profile_geo.py  0007_bulletin_brief.py  0008_ioc_whitelist.py  0009_review_batch.py  0010_story_clusters.py  0011_source_excerpts.py  0012_enrichment_versioning.py  0013_saved_searches.py  0014_investigations.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/core/: config.py  logging.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  article.py  bulletin.py  entities.py  feedback.py  investigation.py  ops.py  scoring_config.py  source.py  user_profile.py  whitelist.py
backend/app/schemas/: article.py  bulletin.py  scoring.py  source.py
backend/app/services/: alert_runner.py  attack_validator.py  benign_domains.py  brief.py  bulletin.py  clustering.py  corrections.py  cve_enrichment.py  dedup.py  embeddings.py  enrichment_prompt.py  enrichment_runner.py  enrichment_schema.py  (+13 more)
backend/data/: attack_techniques.json  benign_domains.txt  gold_set.json
backend/scripts/: eval_enrichment.py  seed_sources.py
backend/tests/: conftest.py  test_api_smoke.py  test_clustering.py  test_dedup.py  test_ioc_validation.py  test_model_comparison.py  test_prompt_safety.py  test_pruning.py  test_rag_analytics.py  test_scoring.py  test_validation.py
(+55 files in other folders)
