[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wraith"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    # Web
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",

    # DB
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg2-binary>=2.9",   # for Postgres when ready
    "aiosqlite>=0.20",

    # Config
    "pydantic-settings>=2.3",
    "python-dotenv>=1.0",

    # Feed ingestion
    "feedparser>=6.0",
    "trafilatura>=1.9",

    # LLM (OpenAI SDK for Ollama-compatible API)
    "openai>=1.40",

    # Scheduling
    "apscheduler>=3.10",

    # Utils
    "python-dateutil>=2.9",
    "anyio>=4.4",
    "python-multipart>=0.0.9",

    # Auth
    "PyJWT>=2.8",
    "bcrypt>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "scripts*"]
